# Rust-Raytracer

./: .gitignore  Cargo.toml  README.md
scene/example/: box_scene.ron  cornell.ron  teapot.ron  test.ron
src/: camera.rs  filter.rs  hittable.rs  io.rs  main.rs  material.rs  random.rs  ray.rs  render.rs  vec3.rs
src/tracer/: bvh.rs  cube.rs  hittable.rs  mesh.rs  mod.rs  sphere.rs  triangle.rs
