[package]
name = "rust_raytracer"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.17", default-features = false }
minifb = "0.24"
quasirandom = "0.3.0"
fastrand = "1.8.0"
rayon = "1.6.1"
ultraviolet = "0.9.0"
radiant = "0.3.0"
clap = { version = "4.1.6", features = ["derive"] }
png = "0.17.7"
serde = {version = "1.0.152", features = ["derive"]}
ron = "0.8.0"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
debug = true
