[package]
name = "rust_raytracer"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.34", default-features = false }
ultraviolet = "0.9.1"
minifb = "0.24"
fastrand = "1.9.0"
quasirandom = "0.3.0"
rayon = "1.7.0"
radiant = "0.3.0"
clap = { version = "4.1.13", features = ["derive"] }
serde = {version = "1.0.158", features = ["derive"]}
ron = "0.8.0"
png = "0.17.7"
tobj = "3.2.4"

[profile.release]
# lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
# debug = true
